--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseURL = "https://weekly.oskarsh.ru/"
 defaultContentLanguage = "ru"
 title = "Еженедельные отчеты"
 theme = "PaperMod"
+copyright = "© 2022 Шарипов Оскар (CC BY-SA 4.0)"
 
 [params]
 defaultTheme = "auto"
