--- a/config.toml
+++ b/config.toml
@@ -14,10 +14,14 @@ copyright = "© 2022 Шарипов Оскар (CC BY-SA 4.0)"
 
 	[params.homeInfoParams]
 	title = "Йоу, я Оскар 👋"
-	content = """Для контактов смотри [сюда](https://oskarsh.ru/contact/).
+	content = """Мои [контакты][con]; наш [чат][cht]; ваш [rss][rss].
 
-Текст отчетов распространяется под лицензией [CC BY-SA
-4.0](https://creativecommons.org/licenses/by-sa/4.0/deed.ru)."""
+Текст распространяется под [CC BY-SA 4.0][cc].
+
+[con]: https://oskarsh.ru/contact
+[cht]: https://t.me/FlamingoSays
+[rss]: https://weekly.oskarsh.ru/index.xml
+[cc]: https://creativecommons.org/licenses/by-sa/4.0/deed.ru"""
 
 [outputs]
 	home = ["HTML", "RSS"]
