--- a/config.toml
+++ b/config.toml
@@ -5,12 +5,16 @@ theme = ["hugo-video", "PaperMod"]
 copyright = "© 2022 Шарипов Оскар (CC BY-SA 4.0)"
 
 [params]
+	showPostNavLinks = true
 	defaultTheme = "auto"
 	showReadingTime = true
 	author = "Оскар"
 	dateFormat = "2006-01-02"
 	disableScrollToTop = true
 	enableRobotsTXT = true
+
+	[params.assets]
+	disableHLJS = true
 
 	[params.homeInfoParams]
 	title = "Йоу, я Оскар 👋"
@@ -29,3 +33,8 @@ copyright = "© 2022 Шарипов Оскар (CC BY-SA 4.0)"
 [markup]
 	[markup.goldmark.renderer]
 		unsafe = true
+
+	[markup.highlight]
+		lineNos = true
+		lineNumbersInTable = true
+		tabWidth = 4
