--- a/deployment/Caddyfile
+++ b/deployment/Caddyfile
@@ -1,14 +1,18 @@
-http://127.0.0.1:80 {
-        root * /srv/weekly
-        file_server
-        handle_errors {
-                @404 {
-                        expression {http.error.status_code} == 404
-                }
-                rewrite @404 /404.html
-                file_server
+http://127.0.0.1:80
+
+root * /srv/weekly
+file_server
+
+handle_errors {
+        @404 {
+                expression {http.error.status_code} == 404
         }
-        header /assets/css/* Cache-Control "public, max-age=604800"
-        header /posts/*/*.webp Cache-Control "public, max-age=3600"
-        header /posts/* Cache-Control "public, max-age=600"
+        rewrite @404 /404.html
+        file_server
 }
+
+header /assets/css/* Cache-Control "public, max-age=604800"
+header /posts/*/*.webp Cache-Control "public, max-age=3600"
+header /posts/* Cache-Control "public, max-age=600"
+
+encode zstd gzip
