--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,12 +1,12 @@
 # build static
-FROM klakegg/hugo:0.107.0 AS builder
+FROM floryn90/hugo:0.147.9 AS builder
 
 WORKDIR /blog
 COPY . /blog/
 RUN hugo build
 
 # serve static
-FROM caddy:2.6.4
+FROM caddy:2.10.0
 
 COPY --from=builder /blog/public /srv/weekly
 COPY deployment/Caddyfile /etc/caddy/Caddyfile
